@@ -856,6 +856,7 @@ AC_CONFIG_FILES([Makefile
 		contrib/pccts/testcpp/Makefile
 		contrib/rtlbrowse/Makefile
 		contrib/vermin/Makefile
+		contrib/xml2stems/Makefile
 		contrib/bundle_for_osx/Makefile
 		contrib/fst_jni/Makefile
 		contrib/wlf2vcd/Makefile
