@@ -1,4 +1,4 @@
 ## -*- makefile
 ##
 
-SUBDIRS= pccts rtlbrowse vermin bundle_for_osx fst_jni wlf2vcd fsdb2vcd
+SUBDIRS= pccts rtlbrowse vermin xml2stems bundle_for_osx fst_jni wlf2vcd fsdb2vcd
