@@ -1,0 +1,10 @@
+## -*- makefile -*-
+##
+
+bin_PROGRAMS= xml2stems
+
+AM_CFLAGS =
+AM_LIBS =
+
+xml2stems_SOURCES= \
+	xml2stems.cc
