@@ -4,5 +4,6 @@
 dist_man_MANS= evcd2vcd.1 fst2vcd.1 ghwdump.1 gtkwave.1 gtkwaverc.5 lxt2miner.1 \
 	lxt2vcd.1 rtlbrowse.1 shmidcat.1 \
 	twinwave.1 vcd2fst.1 vcd2lxt.1 vcd2lxt2.1 \
-	vcd2vzt.1 vermin.1 vzt2vcd.1 vztminer.1 fstminer.1
+	vcd2vzt.1 vermin.1 vzt2vcd.1 vztminer.1 fstminer.1 \
+	xml2stems.1
 
